# src/controllers/auth.controller.ts
@@ -22,7 +22,29 @@ const registerValidateSchema = Yup.object({
   fullname: Yup.string().required(),
   username: Yup.string().required(),
   email: Yup.string().required(),
-  password: Yup.string().required(),
+  password: Yup.string()
+    .required()
+    .min(6, "Password must be at least 6 characters")
+    .test(
+      "at-least-one-uppercase-letter",
+      "Contains at least one uppercase letter",
+      (value) => {
+        if (!value) {
+          return false;
+        }
+
+        const regex = /^(?=.*[A-Z])/;
+        return regex.test(value);
+      }
+    )
+    .test("at-least-one-number", "Contains at least one number", (value) => {
+      if (!value) {
+        return false;
+      }
+
+      const regex = /^(?=.*\d)/;
+      return regex.test(value);
+    }),
   confirmPassword: Yup.string()
     .required()
     .oneOf([Yup.ref("password"), ""], "Password doesn't match"),
@@ -34,7 +56,17 @@ const loginValidateSchema = Yup.object({
 });
 
 export default {
+  /**
+   #swagger.tags = ['Auth']
+   */
   async register(req: Request, res: Response) {
+    /**
+     #swagger.tags = ['Auth']
+     #swagger.requestBody = {
+      required:true,
+      schema: {$ref: "#/components/schemas/RegisterRequest" }
+     }
+     */
     const { fullname, username, email, password, confirmPassword } =
       req.body as unknown as TRegister;
 
@@ -66,6 +98,7 @@ export default {
 
   async login(req: Request, res: Response) {
     /**
+     #swagger.tags = ['Auth']
      #swagger.requestBody={
       required:true,
       schema: {$ref: "#/components/schemas/LoginRequest" }
@@ -86,6 +119,7 @@ export default {
             username: identifier,
           },
         ],
+        isActive: true,
       });
 
       // Validasi password input dengan password di database
@@ -123,6 +157,7 @@ export default {
 
   async me(req: IReqUser, res: Response) {
     /**
+     #swagger.tags = ['Auth']
      #swagger.security=[{ "bearerAuth": [] }]
      */
     try {
@@ -131,6 +166,34 @@ export default {
       res.status(200).json({
         message: "Success Get User Profile",
         data: result,
+      });
+    } catch (error) {
+      const err = error as unknown as Error;
+      res.status(400).json({ message: err.message, data: null });
+    }
+  },
+
+  async activation(req: Request, res: Response) {
+    /**
+     #swagger.tags = ['Auth']
+     #swagger.requestBody={
+       required:true,
+       schema: {$ref: "#/components/schemas/ActivationRequest"}
+
+     }
+     */
+    try {
+      const { code } = req.body as { code: string };
+
+      const user = await UserModel.findOneAndUpdate(
+        { activationCode: code },
+        { isActive: true },
+        { new: true }
+      );
+
+      res.status(200).json({
+        message: "User successfully activated",
+        data: user,
       });
     } catch (error) {
       const err = error as unknown as Error;
